This file only list changes to game code.  Changes to content can be found here:

http://onehouronelife.com/updateLog.php



Version 330     2020-April-23

--Support for +becomeUseX tags, for non-use objects that should turn into a
  specific use count in the newTarget after a transition.  This allows (for
  example), the same scrap box to result from scrapping different objects with
  differing amounts of resultings scrap metal.  A nozzle is +becomeUse2, while
  a full piston head is +becomeUse6.




Version 328     2020-April-17

--Don't interrupt character's speech with automatic +FAMILY+ marker above their
  head.  Fixes #588

--Whenever you get an arrow pointing toward a person (baby, expert, leader,
  owner, visitor, etc), once that person is close, you see a label above their
  head.  Otherwise, they can be hard to locate in a crowd.





Server Fixes

--There are still food surpluses everywhere.  Food scale factor floor 0.5
  (was 1.0), eating bonus left alone. This increases food pressure long-term,
  but not too hard for Eve starts (b/c food scale factor still starts at 1.0).

--Food scaled on a gamma curve instead of linearly, allowing us to reduce
  effectiveness of small foods without affecting large-valued foods so much.
  Gamma starts at 1.0 and eventually reaches 1.5, with a half-life of 4
  generations.  By gen 20, a berry only provides 1 food, but a feast plate
  still provides 40.  Linear food scale factor can still apply on top of gamma
  (to scale all foods uniformly), but turning it off for now (setting floor
  back to 1.0).

--When triggering unlock of iron veins due to a primary homeland, we only count
  it as a primary homeland if it taps out at least one iron vein.  Thus, if a
  family makes a bad choice for their first well in an area with no iron veins,
  they can move later to a spot with iron veins and unlock them with a new well
  site.  Fixes #590

--Applied YUM bonus no longer scaled by food scaling factor (too confusing).